tests/rosetta/out/Java/100-doors.error
javac error: exit status 1
/tmp/TestMochiToJava100-doors2503038691/001/M100Doors.java:19: error: bad operand type Object for unary operator '!'
            doors.set(idx, !doors.get(idx));
                           ^
/tmp/TestMochiToJava100-doors2503038691/001/M100Doors.java:27: error: incompatible types: Object cannot be converted to boolean
            if (doors.get(idx)) {
                         ^
2 errors
